Update Posts “welcome-clone”

--- a/content/posts/welcome-clone.mdx
+++ b/content/posts/welcome-clone.mdx
@@ -1,7 +1,7 @@
 ---
 slug: welcome-clone
-title: Welcome To Next.js and Netlify Blog Template
-date: '2020-06-10'
+title: Welcome To Next.js and Netlify Blog Template clone
+date: 2020-06-10
 author: wutali
 tags:
   - document
